- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    6.0.0 Beta4
 - 
    None
 
- 
        
 - 
        cb6b2bcee2 (qt/qtwayland/dev) cb6b2bcee2 (qt/tqtc-qtwayland/dev)
 
I verified qtwayland clients with vulkan rendering backend.
But some particular animations are too slow on vulkan backend.
I tried to run the below example on vulkan backend (only client side).
According to my analysis, using SequentialAnimation and ParallelAnimation at the same time on vulkan backend is a problem. In other words, the animation is too slow.
WAYLAND_DISPLAY=wayland-1 QSG_RHI_BACKEND=vulkan QT_VULKAN_LIB=/Downloads/1.2.182.0/x86_64/lib/libvulkan.so.1 QT_QPA_PLATFORM=wayland ./animation
- relates to
 - 
                    
QTBUG-89624 Slow performance on Wayland with Vulkan RHI backend
-         
 - Closed
 
 -