client: Add waitForFrameSync for Vulkan

Frames are processed by mFrameQueue in Qtwayand. However, in vulkan
backend, frames are sent by handleUpdate() but waitForFrameSync()
is not called which should handle frames in mFrameQueue.
For the current vulkan backend, frames are only handled by drivers
like mesa. So in the current vulkan backend, some particular animations
don't run or are slow because frames sent by qtwayland are not being
handled.

Fixes: QTBUG-96222
Change-Id: Ifbab385ca619ef9461104eb8bd778f17093a56b5
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
Reviewed-by: YoungSun Park <cathy.park@lge.com>